fix the carousel image flickering

--- a/src/components/ProjectCarousel/carousel.scss
+++ b/src/components/ProjectCarousel/carousel.scss
@@ -6,6 +6,8 @@
   img {
     width: 100%;
     height: 100%;
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
   }
 
   .prev-btn,
@@ -14,7 +16,7 @@
     bottom: 0;
     z-index: 99;
     cursor: pointer;
-    font-size: 43px;
+    font-size: 40px;
     color: #fff;
     transition-duration: 0.3s;
     background-color: rgba(35, 45, 56, 0.6);
