--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,11 +7,6 @@ html {
   // scroll-behavior: smooth;
 }
 
-html.no-scroll,
-body.no-scroll {
-  overflow: visible !important;
-}
-
 *,
 *:before,
 *:after {
